examples/test/testpolicy7442.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7442
  namespace: namespace268
spec:
  podSelector:
    matchLabels:
      key43: value23
      key33: value0
      key32: value26
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key4: value44
          key21: value32
          key6: value39
      podSelector:
        matchLabels:
          key46: value39
          key8: value49
          key21: value22
